# VideoSearch

./: .gitignore  README.md  main.py  pyproject.toml
data/uk_demo/: 6Nigellas.xlsx  80TopGears.xlsx  attenborough_sentences.xlsx  attenborough_transcripts_and_sentences.xlsx  nigella_sentences.xlsx  nigella_transcripts_and_sentences.xlsx  sentences.xlsx  topgear_transcripts_and_sentences.xlsx  transcripts_and_sentences.xlsx
scripts/library_management/: add_to_library.ipynb  control_group_library.ipynb  vimeo_port.ipynb
scripts/transcription/: requirements.txt  whisper_dj.py
scripts/transcription/postprocessing/: merge_sentences.ipynb
video_search/: __init__.py  video_search.py
video_search/configuration/: __init__.py  demo_config.py
video_search/pages/: __init__.py  abstract_page.py  page_manager.py  search_page.py  sidebar.py
video_search/search/: __init__.py  semantha.py
video_transcription/: README.md  requirements.txt  run.py
video_transcription/postprocessing/: data_cleaning.ipynb
